fixed author text overflowing and slightly changed fz fot quote

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -445,7 +445,7 @@ body {
     align-items: flex-end;
     width: 55%;
     height: calc(100% - $quote-date-height);
-    font-size: clamp(26px, 6.5vw, 90px);
+    font-size: clamp(32px, 6.7vw, 90px);
     text-transform: uppercase;
     line-height: 0.9;
     text-wrap: balance;
@@ -454,7 +454,7 @@ body {
     letter-spacing: -0.2vw;
 
     &.--bigger-font-size {
-      font-size: clamp(32px, 7vw, 130px);
+      font-size: clamp(32px, 9vw, 115px);
     }
 
     &.--smaller-font-size {
@@ -486,9 +486,17 @@ body {
       font-size: clamp(15px, 2.2vw, 24px);
     }
 
+    &.--bigger-font-size,
+    &.--medium-bigger-font-size {
+      text-align: right;
+    }
+
     &.--bigger-font-size {
       font-size: clamp(22px, 3.5vw, 34px);
-      text-align: right;
+    }
+
+    &.--medium-bigger-font-size {
+      font-size: clamp(19px, 2.5vw, 30px);
     }
   }
 }
@@ -623,7 +631,7 @@ body {
       align-items: flex-end;
       justify-content: flex-start;
       padding-bottom: 30px;
-      font-size: clamp(17px, 2.5vw, 26px);
+      font-size: clamp(18.5px, 2.5vw, 26px);
       text-align: left !important;
     }
   }
@@ -782,6 +790,10 @@ body {
 
       &.--smaller-font-size {
         font-size: clamp(15px, 3.2vw, 18px);
+      }
+
+      &.--medium-bigger-font-size {
+        font-size: clamp(19px, 3vw, 30px);
       }
     }
   }
